complete redux postReducer and figure out custom popup

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,10 +9,36 @@ monospace;
 $content-font: 'Karla',
 sans-serif;
 
+@mixin flexCenter($direction) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: $direction;
+}
+
+@mixin flexSpaceBetween($direction) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: $direction;
+}
+
+@mixin flexSpaceAround($direction) {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: $direction;
+}
+
+body {
+    overflow-x: hidden;
+}
+
 .App {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
