--- a/src/components/LoginRegisterPopup/LoginRegisterPopup.scss
+++ b/src/components/LoginRegisterPopup/LoginRegisterPopup.scss
@@ -8,29 +8,22 @@
     position: absolute;
     top: 0;
     left: 0;
+    @include flexCenter(row);
 
     #login-register-popup-content {
         padding: 20px;
         font-family: $content-font;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
+        @include flexSpaceBetween(column);
         height: 50vh;
         width: 40vw;
-        position: absolute;
-        left: 30vw;
-        top: 20vh;
         background: #fff;
         z-index: 10;
         border-radius: 20px;
         box-shadow: 0px 0px 4px 4px #b9b9b9;
 
         #login-title-div {
-            display: flex;
-            flex-direction: column;
+            @include flexSpaceBetween(column);
             height: 25%;
-            justify-content: space-between;
 
             h2 {
                 font-size: 3.7em;
@@ -42,9 +35,7 @@
             }
 
             div {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
+                @include flexSpaceBetween(column);
                 height: 40%;
 
 
@@ -57,9 +48,7 @@
 
         #loginRegisterForm {
             height: 40%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+            @include flexSpaceBetween(column);
 
             .btn {
                 background-color: $accent-color;
