--- a/src/components/AddPost/AddPost.scss
+++ b/src/components/AddPost/AddPost.scss
@@ -5,18 +5,49 @@
     height: fit-content;
     width: 100vw;
     @include flexCenter(column);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
 
     #postContainer {
         @include flexCenter(column);
-        width: 100%;
-        height: 90%;
+        width: 80%;
+        height: 80%;
+        background-color: #fff;
+        overflow-y: auto;
+        z-index: 10;
+        border-radius: 20px;
+        box-shadow: 0px 0px 4px 4px #b9b9b9;
+
+        #postTitle {
+            @include flexSpaceAround(row);
+            width: 80%;
+            height: 40%;
+            margin-bottom: 30px;
+            margin-top: 30px;
+            padding: 30px;
+
+            #countryMap {
+                height: 100%;
+                width: 48%;
+                border-radius: 10px;
+            }
+
+            #postInfoTitle {
+                @include flexSpaceAround(column);
+                height: 100%;
+                width: 48%;
+
+                h1 {
+                    font-size: 3em;
+                    font-family: $header-font;
+                    color: $brand-color-dark;
+                }
+            }
+        }
     }
 
-    #countryMap {
-        height: 15vw;
-        width: 15vw;
-        border-radius: 10px;
-    }
 
     button {
         width: 80%;
@@ -26,61 +57,11 @@
         background-color: $brand-color-dark;
         color: $white-color;
         font-size: 1.5em;
-        margin-bottom: 15px;
+        margin: 15px;
     }
-}
 
+    #addImages {
+        width: 100%;
+    }
 
-
-
-.slide-container {
-    width: 40%;
-    margin: auto;
-    margin-bottom: 20px;
-}
-
-img {
-    max-height: 100% !important;
-}
-
-h3 {
-    text-align: center;
-}
-
-.each-slide>div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-position: center;
-    background-size: initial;
-    height: 350px;
-}
-
-.each-slide span {
-    padding: 20px;
-    font-size: 20px;
-    background: #efefef;
-    text-align: center;
-}
-
-.each-fade {
-    display: flex;
-}
-
-.each-fade .image-container {
-    width: 75%;
-    overflow: hidden;
-}
-
-.each-fade .image-container img {
-    width: 100%;
-}
-
-.each-fade h2 {
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background: #adceed;
 }
