--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,6 +1,9 @@
 @import '../../App.scss';
 
 .sidebar {
+
+    // display: none;
+
     height: 100vh;
     width: fit-content;
     position: fixed;
