--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ sans-serif;
 }
 
 body {
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 .App {
@@ -40,5 +40,5 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    // overflow: hidden;
 }
