--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -77,6 +77,9 @@
         .iconDiv {
             @include flexSpaceBetween(row);
 
+            i {
+                color: $brand-color-dark;
+            }
 
             select,
             input {
