--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -10,14 +10,14 @@
     top: 0;
     left: 0;
     z-index: 10;
-    background-color: rgba(224, 224, 224, 0.7);
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 10px;
     align-items: flex-start;
 
     #sideBarTitle {
         // position: absolute;
         // top: 0;
-        height: 25%;
+        height: 30%;
         align-items: center;
         // justify-content: flex-start;
         align-items: center;
@@ -69,28 +69,70 @@
     }
 
     .menuItems {
-        width: 100%;
-        height: 50%;
+        width: 95%;
+        height: 40%;
 
         @include flexSpaceBetween(column);
 
         .iconDiv {
             @include flexSpaceBetween(row);
+            width: 100%;
+            height: 150px;
+            padding-left: 15px;
 
             i {
                 color: $brand-color-dark;
             }
 
+            .notifications {
+                @include flexSpaceBetween(row);
+                width: 100%;
+
+                #notificationsIcon {
+                    width: fit-content;
+                    position: relative;
+
+
+                    #notify {
+                        height: 10px;
+                        width: 10px;
+                        background-color: rgb(219, 76, 76);
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        z-index: 10000;
+                        border-radius: 50%;
+                    }
+                }
+
+            }
+
+            button {
+                border: 1px solid $brand-color;
+                height: 1.9em;
+                width: 160px;
+                font-size: 1em;
+                background-color: rgba(255, 255, 255, 0.1);
+                color: $brand-color-dark;
+            }
+
+
             select,
             input {
-                height: 1.6em;
-                width: 150px;
+                height: 1.7em;
+                width: 160px;
                 margin-left: 10px;
-                background-color: #fff;
-                border: 1px solid #6d6f6f;
+                background-color: rgba(255, 255, 255, 0.5);
+                color: $brand-color-dark;
+                text-align: center;
+                border: 1px solid $brand-color;
                 border-radius: 1px;
                 font-size: 1.1em;
                 font-family: $content-font;
+            }
+
+            select {
+                text-align-last: center;
             }
 
             input {
@@ -108,7 +150,7 @@
     }
 
     #empty {
-        height: 25%;
+        height: 30%;
     }
 
 }
@@ -169,5 +211,4 @@
         height: 1.8em;
     }
 
-    .sidenav---navitem---9uL5T {}
 }
