--- a/src/components/ImageScroll/ImageScroll.scss
+++ b/src/components/ImageScroll/ImageScroll.scss
@@ -2,15 +2,14 @@
 
 #imageScrollDiv {
     // width: fit-content;
-    width: fit-content;
-    max-width: 100%;
+    width: 100%;
     height: 200px;
     overflow-x: auto;
     display: flex;
     justify-content: flex-start;
     margin-bottom: 30px;
     margin-top: 0;
-    object-fit: cover;
+    // object-fit: none;
 
     img {
         display: inline-block;
