--- a/src/components/Legend/Legend.scss
+++ b/src/components/Legend/Legend.scss
@@ -36,34 +36,109 @@
         height: 200px;
         width: 250px;
         overflow-y: auto;
+        overflow-x: hidden;
 
-        h3 {
-            font-size: 1.3em;
-            padding: 8px;
-        }
+        #legendFriendsTab {
+            width: 100%;
+            height: 100%;
+            margin-top: 5px;
 
-        &>div {
-            position: relative;
-            height: 35px;
-            @include flexCenter(column);
-
-            .legendFriend {
-                opacity: .4;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
+            h3 {
+                font-size: 1.3em;
+                padding: 8px;
             }
 
-            p {
-                font-size: 1.2em;
-                height: 100%;
-                width: 100%;
-                position: absolute;
-                top: .4em;
-                left: 0;
+            &>div {
+                position: relative;
+                height: 40px;
+                @include flexCenter(column);
+
+                .legendFriend {
+                    opacity: .4;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
+
+                .legendFriendInfo {
+                    height: 100%;
+                    width: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    @include flexSpaceBetween(row);
+
+                    .react-switch {
+                        margin-left: 10px;
+                    }
+
+                    p {
+                        font-size: 1em;
+                    }
+
+                    .colorSwatch {
+                        height: 25px;
+                        width: 25px;
+                        // border: 2px solid white;
+                        opacity: 1;
+                        margin-right: 10px;
+                        @include flexCenter(row);
+
+                        i {
+                            margin-top: 3px;
+                        }
+                    }
+                }
             }
         }
+
+
+        #legendFindTab {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            input {
+                height: 1.7em;
+                width: 90%;
+                background-color: rgba(255, 255, 255, 0.5);
+                color: $brand-color-dark;
+                text-align: center;
+                border: 1px solid $brand-color;
+                border-radius: 2px;
+                font-size: 1.1em;
+                font-family: $content-font;
+                margin: 5px 0;
+            }
+
+            .userSearch {
+                @include flexSpaceBetween(row);
+                height: 30px;
+                width: 80%;
+                margin: 3px 0;
+
+                button {
+                    height: 30px;
+                    width: 40%;
+                    border: none;
+                    background: $brand-color-dark;
+                    font-family: $content-font;
+                    font-size: .8em;
+                    color: $white-color;
+                    border-radius: 2px;
+                }
+            }
+        }
+    }
+
+    .closed {
+        display: none !important;
+    }
+
+    .open {
+        display: block;
     }
 }
