--- a/src/components/AddPost/AddPost.scss
+++ b/src/components/AddPost/AddPost.scss
@@ -17,8 +17,15 @@
         background-color: #fff;
         overflow-y: auto;
         z-index: 10;
-        border-radius: 20px;
+        border-radius: 2px;
         box-shadow: 0px 0px 4px 4px #b9b9b9;
+        position: relative;
+
+        i {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
 
         #postTitle {
             @include flexSpaceAround(row);
@@ -31,7 +38,7 @@
             #countryMap {
                 height: 100%;
                 width: 48%;
-                border-radius: 10px;
+                border-radius: 2px;
             }
 
             #postInfoTitle {
@@ -53,14 +60,18 @@
         width: 80%;
         height: 50px;
         border: none;
-        border-radius: 5px;
+        border-radius: 1px;
         background-color: $brand-color-dark;
         color: $white-color;
+        // border: 1px solid $brand-color;
         font-size: 1.5em;
         margin: 15px;
     }
 
     #addImages {
+        background-color: #fff;
+        color: $brand-color;
+        border: 2px solid $brand-color;
         width: 100%;
     }
 
