--- a/src/components/ImageScroll/ImageScroll.scss
+++ b/src/components/ImageScroll/ImageScroll.scss
@@ -2,7 +2,7 @@
 
 #imageScrollDiv {
     // width: fit-content;
-    width: 100%;
+    max-width: 100%;
     height: 200px;
     overflow-x: auto;
     display: flex;
